Update email stylesheet to include modification type for each path when available.  Leave modified as normal text color to avoid too much garishness.

--- a/vulcan-web/source/main/docroot/css/parts/color.css
+++ b/vulcan-web/source/main/docroot/css/parts/color.css
@@ -106,10 +106,6 @@ input[type=text].new-label {
 	color: #666;
 }
 
-.modify {
-	color: orange;
-}
-
 .add {
 	color: green;
 }
